--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -1,3 +1,8 @@
 @use 'header' as *;
 @use 'title' as *;
 @use 'button' as *;
+@use 'menu' as *;
+@use 'label' as *;
+@use 'partner-links' as *;
+@use 'card' as *;
+@use 'nav-icons' as *;
