Добавлено (social-icons, card : big, full, small)

--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -4,5 +4,8 @@
 @use 'menu' as *;
 @use 'label' as *;
 @use 'partner-links' as *;
-@use 'card' as *;
+@use 'card-small' as *;
 @use 'nav-icons' as *;
+@use 'social-icons' as *;
+@use 'card-big' as *;
+@use 'card-full' as *;
