--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -2,5 +2,10 @@
 
 // Блок: header
 .header {
+    &__wrapper{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
 }
