--- a/src/scss/blocks/_index.scss
+++ b/src/scss/blocks/_index.scss
@@ -9,3 +9,8 @@
 @use 'social-icons' as *;
 @use 'card-big' as *;
 @use 'card-full' as *;
+@use 'page' as *;
+@use 'logo' as *;
+@use 'hero' as *;
+@use 'business-intro' as *;
+@use 'achievements' as *;
