--- a/src/scss/blocks/_label.scss
+++ b/src/scss/blocks/_label.scss
@@ -2,7 +2,7 @@
 
 // Блок: label
 .label {
-    display: inline;
+    display: inline-block;
     font-family: var(--font-family);
     font-size: 16px;
     line-height: 1.87;
