--- a/src/scss/blocks/_card-big.scss
+++ b/src/scss/blocks/_card-big.scss
@@ -8,10 +8,10 @@
         display: flex;
         align-items: flex-end;
         justify-content: center;
-        width: 511px;
+        width: 100%;
         height: 600px;
-        background: url(../../src/img/Circle.png) no-repeat bottom;
-        background-color: #edfffd;
+        background: #edfffd url(../../src/img/Circle.png) no-repeat bottom;
+        // background-color: #edfffd; // <---
         border-radius: 20px;
         margin-bottom: 35px;
 
